--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RegistrationActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -36,43 +36,19 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:inputType="textPassword"/>
+        <EditText
+            android:id="@+id/repeat_password_form"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Repeat password"
+            android:inputType="textPassword"/>
         <Button
-            android:id="@+id/sign_in_button"
+            android:id="@+id/log_in_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="sing in"
-            android:layout_marginTop="100dp"
-            android:onClick="onSignInClick"/>
+            android:text="log in"
+            android:layout_marginTop="100dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <Button
-                android:id="@+id/registration_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:layout_marginRight="5dp"
-                android:text="log in"
-                android:textColor="@color/black"
-                android:background="?android:attr/selectableItemBackground"
-                android:textSize="10dp"
-                android:onClick="onRegistrationClick"/>
-            <Button
-                android:id="@+id/forgot_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:layout_marginLeft="5dp"
-                android:text="forgot password?"
-                android:textColor="@color/black"
-                android:background="?android:attr/selectableItemBackground"
-                android:textSize="10dp"/>
-
-        </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
