--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,30 +19,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="100dp"
+            android:letterSpacing="0.1"
             android:text="KITTY\nNOTES"
             android:textAlignment="center"
+            android:textColor="#000000"
             android:textSize="50dp"
-            android:letterSpacing="0.1"/>
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/username_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username"
-            android:inputType="textPersonName"/>
+            android:hint="Username" />
         <EditText
             android:id="@+id/password_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
-            android:inputType="textPassword"/>
+            android:hint="Password"/>
+
         <Button
             android:id="@+id/sign_in_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="sing in"
             android:layout_marginTop="100dp"
-            android:onClick="onSignInClick"/>
+            android:background="#000000"
+            android:onClick="onSignInClick"
+            android:text="sing in" />
 
         <LinearLayout
             android:layout_width="match_parent"
