--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,75 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:paddingHorizontal="50px"
-        tools:ignore="MissingConstraints">
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:name="com.example.kittynotes.fragments.RegistrationFragment"
+        tools:layout="@layout/fragment_sign_in" />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="100dp"
-            android:letterSpacing="0.1"
-            android:text="KITTY\nNOTES"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="50dp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/username_form"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Username" />
-        <EditText
-            android:id="@+id/password_form"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"/>
-
-        <Button
-            android:id="@+id/sign_in_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:background="#000000"
-            android:onClick="onSignInClick"
-            android:text="sing in" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <Button
-                android:id="@+id/registration_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:layout_marginRight="5dp"
-                android:text="log in"
-                android:textColor="@color/black"
-                android:background="?android:attr/selectableItemBackground"
-                android:textSize="10dp"
-                android:onClick="onRegistrationClick"/>
-            <Button
-                android:id="@+id/forgot_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:layout_marginLeft="5dp"
-                android:text="forgot password?"
-                android:textColor="@color/black"
-                android:background="?android:attr/selectableItemBackground"
-                android:textSize="10dp"/>
-
-        </LinearLayout>
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
